<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/titlebar"
        layout="@layout/ui_toolbar_common" />

    <View
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_8"
        android:background="@color/defualt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlebar" />

    <TextView
        android:id="@+id/tv_tip_old"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40"
        android:layout_margin="@dimen/dp_40"
        android:text="@string/modify_pwd_old"
        android:gravity="center"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/sp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space" />

    <com.hlt.jzwebsite.widget.WithDelEditText
        android:id="@+id/et_old_pwd"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        android:background="@null"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:hint="@string/et_input_txt_old_pwd"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="@dimen/dp_12"
        android:textColorHint="#999999"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space"
        app:layout_constraintLeft_toRightOf="@id/tv_tip_old" />


    <View
        android:id="@+id/view_space"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/et_old_pwd" />

    <TextView
        android:id="@+id/tv_tip_new"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:text="@string/modify_pwd_new"
        android:gravity="center"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/sp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_space" />

    <com.hlt.jzwebsite.widget.WithDelEditText
        android:id="@+id/et_new_pwd"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        android:background="@null"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"
        android:hint="@string/et_input_txt_new_pwd"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="@dimen/dp_12"
        android:textColorHint="#999999"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/tv_tip_new"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_space" />


    <View
        android:id="@+id/view_spaces"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/et_new_pwd" />


    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:text="@string/modify_pwd_txt_tip"
        android:gravity="center|left"
        android:textColor="@color/divider"
        android:textSize="@dimen/sp_14"
        app:layout_constraintTop_toBottomOf="@id/view_spaces" />


    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_margin="@dimen/dp_40"
        android:textSize="@dimen/sp_16"
        android:background="@drawable/shape_btn_radius_boder"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_tip"/>
</androidx.constraintlayout.widget.ConstraintLayout>