<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/titlebar"
        layout="@layout/ui_toolbar_common" />

    <View
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_8"
        android:background="@color/defualt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlebar" />

    <TextView
        android:id="@+id/tv_top_tip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_40"
        android:padding="@dimen/dp_4"
        android:text="@string/modify_phone_txt_tip"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/sp_22"
        app:layout_constraintTop_toBottomOf="@id/space" />

    <com.hlt.jzwebsite.widget.WithDelEditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_40"
        android:background="@null"
        android:hint="@string/et_input_txt_phone"
        android:inputType="phone"
        android:maxLength="11"
        android:paddingLeft="@dimen/dp_4"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_top_tip" />


    <View
        android:id="@+id/view_space"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/et_phone" />

    <com.hlt.jzwebsite.widget.WithDelEditText
        android:id="@+id/et_verticode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_40"
        android:background="@null"
        android:hint="@string/et_input_txt_vertic_code"
        android:inputType="phone|number"
        android:maxLength="6"
        android:textColorHint="#999999"
        android:textSize="14sp"
        android:paddingLeft="@dimen/dp_4"
        app:layout_constraintTop_toBottomOf="@id/view_space" />

    <!--android:background="@drawable/shape_btn_sms_radius"-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_verify_code"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_40"
        android:background="@drawable/shape_btn_sms_radius"
        android:paddingLeft="@dimen/dp_6"
        android:paddingRight="@dimen/dp_6"
        android:text="@string/btn_txt_vertic_code"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_space" />

    <View
        android:id="@+id/view_spaces"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_marginRight="@dimen/dp_40"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/et_verticode" />


    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_46"
        android:layout_margin="@dimen/dp_40"
        android:background="@drawable/shape_btn_radius_boder"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@id/view_spaces" />
</androidx.constraintlayout.widget.ConstraintLayout>