<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_40"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_bg_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_bg_login_top"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_top_tip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_100"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_40"
            android:padding="@dimen/dp_4"
            android:text="@string/login_verifica_txt_tip"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/sp_22"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.hlt.jzwebsite.widget.WithDelEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:visibility="gone"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_40"
            android:background="@null"
            android:hint="@string/et_input_txt_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="@dimen/dp_4"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_top_tip" />


        <View
            android:id="@+id/view_space"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_40"
            android:visibility="gone"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@id/et_phone" />

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:gravity="center|left"
            android:text="@string/login_verifica_tip_desc"
            android:textColor="@color/divider"
            android:visibility="gone"
            android:textSize="@dimen/sp_12"
            app:layout_constraintTop_toBottomOf="@id/view_space" />

        <!--bottom agree-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_verify_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_margin="@dimen/dp_40"
            android:layout_marginTop="40dp"
            android:visibility="gone"
            android:background="@drawable/shape_btn_radius_boder"
            android:paddingLeft="@dimen/dp_6"
            android:paddingRight="@dimen/dp_6"
            android:text="@string/btn_txt_vertic_code"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/tv_tip"
            tools:layout_editor_absoluteX="40dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_loginWx"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:padding="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_80"
            android:background="@mipmap/ic_login_wx"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@id/tv_userAgree"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_userAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:gravity="center|left"
            android:text="@string/login_verifica_tip_agree"
            android:textColor="@color/divider"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="30dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/inc_toolbar"
        layout="@layout/toolbar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:visibility="visible"
        app:srcCompat="@mipmap/ic_close_black" />
</RelativeLayout>