<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_40"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_bg_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_bg_login_top"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_top_tip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_100"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_40"
            android:padding="@dimen/dp_4"
            android:text="@string/login_verifica_txt_tip_input"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/sp_22"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:gravity="center|left"
            android:paddingLeft="@dimen/dp_6"
            android:text=""
            android:textColor="@color/divider"
            android:textSize="@dimen/sp_12"
            app:layout_constraintTop_toBottomOf="@id/tv_top_tip"
            tools:text="" />


        <com.matthew.passwordinput.lib.PasswordInputView
            android:id="@+id/et_verticode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_40"
            android:background="@null"
            android:inputType="number"
            android:padding="1dp"
            app:pwv_maxLength="5"
            android:text=""
            android:textColor="@color/colorYello"
            app:pwv_borderStyle="line"
            app:pwv_haveInputBorderColor="@color/colorYello"
            app:pwv_pwdStyle="plaintext"
            app:pwv_spacing="12dp"
            app:layout_constraintTop_toBottomOf="@id/tv_tip" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:gravity="center|left"
            android:text="@string/et_verticode_tip_error"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            android:textSize="@dimen/sp_12"
            app:layout_constraintTop_toBottomOf="@id/et_verticode" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_verify_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_margin="@dimen/dp_40"
            android:background="@drawable/shape_btn_radius_boder"
            android:paddingLeft="@dimen/dp_6"
            android:paddingRight="@dimen/dp_6"
            android:text="@string/btn_txt_vertic_code"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/tv_error" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/inc_toolbar"
        layout="@layout/toolbar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:visibility="visible"
        app:srcCompat="@mipmap/ic_arrows_back_b" />
</RelativeLayout>